--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flappy_search_bar_ns: ^2.0.2
   flutter:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
   geolocator: ^9.0.2
   modal_progress_hud_nsn: ^0.4.0
   weather: ^3.1.0
@@ -41,6 +42,10 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "./assets/image/weather.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
